# Event_Base

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md  template---empty.md
data/rozklady-jazdy/: agency.txt  calendar.txt  calendar_dates.txt  control_stops.txt  feed_info.txt  routes.txt  stops.txt  trips.txt  variants.txt  vehicle_types.txt
data/rozklady-jazdy-xml/0000/: 0000.xml
data/rozklady-jazdy-xml/0001/: 0001.xml
data/rozklady-jazdy-xml/0002/: 0002.xml
data/rozklady-jazdy-xml/0005/: 0005.xml
data/rozklady-jazdy-xml/0006/: 0006.xml
data/rozklady-jazdy-xml/0007/: 0007.xml
data/rozklady-jazdy-xml/0008/: 0008.xml
data/rozklady-jazdy-xml/0009/: 0009.xml
data/rozklady-jazdy-xml/000a/: 000a.xml
data/rozklady-jazdy-xml/000d/: 000d.xml
data/rozklady-jazdy-xml/000k/: 000k.xml
data/rozklady-jazdy-xml/000n/: 000n.xml
data/rozklady-jazdy-xml/0011/: 0011.xml
data/rozklady-jazdy-xml/0012/: 0012.xml
data/rozklady-jazdy-xml/0014/: 0014.xml
data/rozklady-jazdy-xml/0015/: 0015.xml
data/rozklady-jazdy-xml/0017/: 0017.xml
data/rozklady-jazdy-xml/0018/: 0018.xml
data/rozklady-jazdy-xml/0019/: 0019.xml
data/rozklady-jazdy-xml/0021/: 0021.xml
data/rozklady-jazdy-xml/0023/: 0023.xml
data/rozklady-jazdy-xml/0024/: 0024.xml
data/rozklady-jazdy-xml/0100/: 0100.xml
data/rozklady-jazdy-xml/0101/: 0101.xml
data/rozklady-jazdy-xml/0102/: 0102.xml
data/rozklady-jazdy-xml/0103/: 0103.xml
data/rozklady-jazdy-xml/0104/: 0104.xml
src/ebc/: cli.py  mpkloader.py  target_stop.py
(+97 files in other folders)
