[project]
name = "ebc"
version = "0.1.0"
description = ""
authors = [
    {name = "Kacper Drążyk",email = "kacper.drazyk@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff (>=0.14.1,<0.15.0)"
]

[tool.poetry]
packages = [{include = "ebc", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
hello = "ebc:hello"
