[project]
name = "ebc"
version = "0.1.0"
description = ""
authors = [
    {name = "Kacper Drążyk",email = "kacper.drazyk@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff (>=0.14.1,<0.15.0)",
    "click (>=8.3.0,<9.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ebc", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
hello = "ebc:hello"
cli = "ebc.cli:main"
